# aiooiv

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: desktop-ci.yml  release.yml
scripts/: check-workflows.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: settings.rs  tasks.rs
src-tauri/src/services/: db.rs  image_store.rs  mod.rs  openai.rs
src-tauri/src/state/: app_state.rs
src/components/: AiooivLogo.tsx  ImagePreview.tsx  Settings.tsx  SettingsDialog.tsx  TaskForm.tsx  TaskList.tsx
src/components/tasks/: TaskCard.tsx  TaskStatusBadge.tsx
src/lib/: commands.ts
src/stores/: creationDraft.ts  settings.ts  tasks.ts
